tests/vertical-slice/reject/gen_yield_vec_indirect_enum.hew
// Reject: a generator yielding a `Vec` of an indirect-enum element fails
// CLOSED at check time. Each yielded frame is a fresh, solely-owned Vec the
// consuming body must release, but the indirect-enum element's per-element
// node free is unwired — the only available release is the buffer-only
// `hew_vec_free`, which would leak every element node, once per frame.
// As of #2647 the `Vec<indirect-enum>` construction is rejected at the
// type-checker boundary (the earliest fail-closed point), which fires before
// the value can reach the generator yield seam. The MIR yield/recv
// release-verdict refusal remains as a backstop for any shape that reaches it
// without local construction.
indirect enum Wrapped {
    Val(i64);
}

gen fn make_vecs(n: i64) -> Vec<Wrapped> {
    var i = 0;
    while i < n {
        let v: Vec<Wrapped> = Vec::new();
        v.push(Wrapped::Val(i));
        v.push(Wrapped::Val(i * 2));
        yield v;
        i = i + 1;
    }
}

fn main() {
    for item in make_vecs(5000) {
        if item.len() != 2 {
            println("BAD");
        }
    }
    println("done");
}
